# AoC2023

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python.yml
input/: README.md  answers
src/python/: aoc_day1.py  aoc_day2.py  aoc_day3.py  aoc_day4.py  aoc_day5.py  aoc_day6.py  aoc_day7.py  aoc_day8.py
tests/: conftest.py  test_answers.py
